--- a/Web/Views/DiscussionForm/Overview.cshtml
+++ b/Web/Views/DiscussionForm/Overview.cshtml
@@ -130,6 +130,9 @@
     </div>
 </nav>
 <div id="testing123">
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <partial name="_DiscussionFormPartial" model="Model"/>
 
 </div>
@@ -182,16 +185,14 @@
                     data: form.serialize(),
                     success: function (data) {
                         $("#testing123").html(data);
-                        bindFormSubmit();  // Rebind after rendering new content
+                        bindFormSubmit();
                     }
                 });
             });
         }
 
-        bindFormSubmit(); // Initial binding
+        bindFormSubmit(); 
     });
-
-
 </script>
 </body>
 </html>
