--- a/Web/Views/DiscussionForm/Overview.cshtml
+++ b/Web/Views/DiscussionForm/Overview.cshtml
@@ -110,11 +110,10 @@
 <body>
 <nav class="navbar">
     <div class="container-fluid">
-        <input type="text" class="form-control" placeholder="Search">
+        <a href="/" class="mr-3">
+            <i class="fas fa-home fa-lg"></i>
+        </a>
         <div class="ml-auto d-flex align-items-center">
-            <i class="ml-3 far fa-bell"></i>
-            <i class="ml-3 far fa-envelope"></i>
-
             <!-- Profile Dropdown -->
             <div class="dropdown ml-3">
                 <button class="btn btn-link dropdown-toggle" type="button" id="profileDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -130,6 +129,7 @@
     </div>
 </nav>
 <div id="testing123">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -138,29 +138,17 @@
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-@* <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> *@
-
 
 <script>
     
-
     function toggleReplyInput(commentId) {
+    
         var replyInput = document.getElementById('reply-input-' + commentId);
+        console.log('reply-input-' + commentId);
         if (replyInput.style.display === 'none' || replyInput.style.display === '') {
             replyInput.style.display = 'block';
         } else {
             replyInput.style.display = 'none';
-        }
-    }
-
-    function submitReply(commentId) {
-        var replyText = document.querySelector('#reply-input-' + commentId + ' textarea').value;
-        if (replyText) {
-            alert('Your reply: ' + replyText);
-            document.querySelector('#reply-input-' + commentId + ' textarea').value = ''; // Clear the textarea after submission
-            document.getElementById('reply-input-' + commentId).style.display = 'none'; // Hide the reply input
-        } else {
-            alert('Please write a reply before submitting.');
         }
     }
 
@@ -191,7 +179,40 @@
             });
         }
 
-        bindFormSubmit(); 
+        bindFormSubmit();
+
+    });
+</script>
+
+<script>
+    $(document).ready(function () {
+        $(document).on("submit", "form[id^='replyForm']", function (event) {
+            event.preventDefault();
+
+            var form = $(this);
+            var postId = form.data('post-id');
+            var parentId = form.data('parent-id') ?? null;
+            var replyText = $("#replyText-" + parentId ?? postId).val();
+
+            $.ajax({
+                url: "/DiscussionForm/CreateComment",
+                type: "POST",
+                data: {
+                    DiscussionFormId: postId,
+                    text: replyText,
+                    parentId : parentId
+                },
+                success: function (data) {
+                    location.reload(); 
+                }
+            });
+        });
+
+        $(document).on("click", ".btn-outline-secondary", function () {
+            var postId = $(this).closest('.post-card').data('post-id');
+            var replyInput = $("#reply-input-" + postId);
+            replyInput.toggle(); 
+        });
     });
 </script>
 </body>
