--- a/Web/Views/GroupChat/Overview.cshtml
+++ b/Web/Views/GroupChat/Overview.cshtml
@@ -141,10 +141,10 @@
 <body>
 <nav class="navbar">
     <div class="container-fluid">
-        <input type="text" class="form-control" placeholder="Search">
+        <a href="/" class="mr-3">
+            <i class="fas fa-home fa-lg"></i>
+        </a>
         <div class="ml-auto d-flex align-items-center">
-            <i class="ml-3 far fa-bell"></i>
-            <i class="ml-3 far fa-envelope"></i>
 
             <!-- Profile Dropdown -->
             <div class="dropdown ml-3">
@@ -192,7 +192,7 @@
         </div>
     </div>
 </div>
-
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
@@ -238,10 +238,6 @@
             var groupChatId = $("#groupChatId").val();
             $.get("/GroupChat/LoadChatMessages", { groupChatId: groupChatId }, function (data) {
                 $("#chatMessagesContainer").html(data);
-                if (initialScroll) {
-                    initialScroll = false;
-            
-                }
             });
         }
 
