--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -77,7 +77,7 @@ Layout = null;
         <div class="row">
             <div class="col-md-6 col-lg-3 mb-4">
                 <div class="card shadow-sm">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Activiteiten">
+                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Groep chats">
                     <div class="card-body text-center">
                         <h5 class="card-title">Groep chats</h5>
                         <p class="card-text">Verbind en chat met anderen in onze gemeenschap..</p>
@@ -87,7 +87,7 @@ Layout = null;
             </div>
             <div class="col-md-6 col-lg-3 mb-4">
                 <div class="card shadow-sm">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Groepsgesprekken">
+                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Gespreks formulieren">
                     <div class="card-body text-center">
                         <h5 class="card-title">Formulieren</h5>
                         <p class="card-text">Stel vragen en start gesprekken met leeftijdsgenoten.</p>
