--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -97,21 +97,11 @@ Layout = null;
             </div>
             <div class="col-md-6 col-lg-3 mb-4">
                 <div class="card shadow-sm">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Mentor Programma">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Mentor Programma</h5>
-                        <p class="card-text">Krijg begeleiding en steun van ervaren mentoren.</p>
-                        <a href="#" class="btn btn-primary">Vind een Mentor</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3 mb-4">
-                <div class="card shadow-sm">
                     <img src="https://via.placeholder.com/150" class="card-img-top" alt="Vrijwilligerswerk">
                     <div class="card-body text-center">
                         <h5 class="card-title">Vrijwilligerswerk</h5>
                         <p class="card-text">Geef terug aan de gemeenschap door vrijwilligerswerk.</p>
-                        <a href="#" class="btn btn-primary">Ontdek vrijwilligerswerk</a>
+                        <a href="https://192.168.178.10:3443" class="btn btn-primary">Ontdek vrijwilligerswerk</a>
                     </div>
                 </div>
             </div>
